"fix: minor issues on mobile devices"

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,10 +42,12 @@ header {
     transform: translate(-50%, -50%);
     background: rgba(255, 255, 255, 0.8);
     border: 2px solid #333;
-    border-radius: 5px;
-    padding: 12px 20px;
-    font-size: 16px;
+    border-radius: 10px;
+    padding: 15px 30px;
+    font-size: 20px;
+    font-weight: bold;
     cursor: pointer;
+    z-index: 5;
 }
 
 /* Styles for the game page */
@@ -125,10 +127,7 @@ header {
         font-size: 65px;
     }
 
-    #playButton {
-        padding: 12px 20px;
-        font-size: 16px;
-    }
+  
 }
 
 /* Desktops (≥ 1201px) */
@@ -137,8 +136,5 @@ header {
         font-size: 70px;
     }
 
-    #playButton {
-        padding: 14px 24px;
-        font-size: 18px;
-    }
+
 }
